--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,15 +14,24 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.14",
+    "body-parser": "^2.2.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "multer": "^1.4.5-lts.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.28.0"
+    "typescript-eslint": "^8.28.0",
+    "xlsx": "^0.18.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.17.1",
+    "mongoose": "^8.13.1",
     "nodemon": "^3.1.9"
   }
 }
