--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "rootDir": "./src",
+    "outDir": "./dist",
   },
   "lib": ["es2015"]
 }
